@@ -1,5 +1,8 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.4.9:
+  * bug fix: fixed x86 GC bug causing heap corruption. (lp#1749369)
+
 changes in sbcl-1.4.8 relative to sbcl-1.4.7:
   * bug fix: redefinition of method combinations now does the expected thing;
     generic functions using that method combination have their effective
